@@ -10,6 +10,7 @@ CHANGELOG
 * Order overlapping topologies by order of progression (fixes #777)
 * Improved TinyMCE configuration, for resize and cleanup (fixes #351, #711)
 * Changed trek duration interval for notion of days (fixes #880)
+* Show city departure in trek public export (fixes #881)
 
 0.20.9 (2013-10-30)
 -------------------
